--- a/report/refs.bib
+++ b/report/refs.bib
@@ -3,6 +3,15 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@misc{zheng2023judging,
+      title={Judging LLM-as-a-judge with MT-Bench and Chatbot Arena}, 
+      author={Lianmin Zheng and Wei-Lin Chiang and Ying Sheng and Siyuan Zhuang and Zhanghao Wu and Yonghao Zhuang and Zi Lin and Zhuohan Li and Dacheng Li and Eric. P Xing and Hao Zhang and Joseph E. Gonzalez and Ion Stoica},
+      year={2023},
+      eprint={2306.05685},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
 @inproceedings{fan-etal-2019-eli5,
     title = "{ELI}5: Long Form Question Answering",
     author = "Fan, Angela  and
